Added Player class

--- a/iGraphics Project/iGraphics Project.vcxproj
+++ b/iGraphics Project/iGraphics Project.vcxproj
@@ -66,10 +66,14 @@
     <None Include="smurf.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game.h" />
     <ClInclude Include="iGraphics.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="iMain.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
