--- a/iGraphics Project/iGraphics Project.vcxproj.filters
+++ b/iGraphics Project/iGraphics Project.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClInclude Include="iGraphics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="smurf.bmp">
@@ -25,7 +31,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="iMain.cpp">
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
