Updated In Game Pause Menu

--- a/iGraphics Project/iGraphics Project.vcxproj
+++ b/iGraphics Project/iGraphics Project.vcxproj
@@ -69,7 +69,8 @@
     <None Include="cursor(0).png" />
     <None Include="cursor2(255).bmp" />
     <None Include="cursor2(255).png" />
-    <None Include="smurf.bmp" />
+    <None Include="PauseMenu(255).bmp" />
+    <None Include="PauseMenu(255).png" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bubble.h" />
