--- a/Road To Triumph/Road To Triumph.vcxproj
+++ b/Road To Triumph/Road To Triumph.vcxproj
@@ -50,13 +50,8 @@
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;Glaux.lib;GLU32.LIB;glui32.lib;glut32.lib;OPENGL32.LIB;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(ProjectDir)res\audio\" "$(SolutionDir)$(Configuration)\res\audio"
-copy /Y "$(ProjectDir)res\images\Credit.bmp" "$(SolutionDir)$(Configuration)\res\images\"
-copy /Y "$(ProjectDir)res\images\cursor(0).bmp" "$(SolutionDir)$(Configuration)\res\images\"
-copy /Y "$(ProjectDir)res\images\PauseMenu(255).bmp" "$(SolutionDir)$(Configuration)\res\images\"
-copy /Y "$(SolutionDir)Dependencies\OpenGL\dll\glu32.dll" "$(SolutionDir)$(Configuration)\"
-copy /Y "$(SolutionDir)Dependencies\OpenGL\dll\glut32.dll" "$(SolutionDir)$(Configuration)\"
-copy /Y "$(SolutionDir)Dependencies\OpenGL\dll\opengl32.dll" "$(SolutionDir)$(Configuration)\"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
