--- a/Road To Triumph/Road To Triumph.vcxproj.filters
+++ b/Road To Triumph/Road To Triumph.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="FileUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InfoFile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FileUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InfoFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
